test_cases/fail/f32.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
IF (x)
START IF
    PRINT: "yes"
END IF
END SCRIPT
